Renamed files and changed a few attributes in sass

--- a/client/css/NavigationBarTop.sass
+++ b/client/css/NavigationBarTop.sass
@@ -1,7 +1,7 @@
 @import color
 
 .navbar-default 
-    background-color: $default-blue
+    background-color: $blue
     border-color: none
 
     a 
