--- a/client/css/style.sass
+++ b/client/css/style.sass
@@ -3,13 +3,13 @@
 @import color
 
 // Component imports
-@import NavigationBar__Top
+@import NavigationBarTop
 
 
 // Global Sass
 #app
     font-family: 'Open Sans', sans-serif
-    color: $default-grey
+    color: $grey
 
 
 
