--- a/client/css/NavigationBarTop.sass
+++ b/client/css/NavigationBarTop.sass
@@ -1,11 +1,40 @@
 @import color
 
-.navbar-default 
-    background-color: $blue
-    border-color: none
+.navigationContainer
+  display: flex
+  justify-content: center
+  width: 100%
+  background: $blue
 
-    a 
-        color: $white !important
+.navigationBarContainer
+  flex: 1
+  display: flex
+  justify-content: flex-start
+  height: 160px
+  max-width: 1400px
 
-    a:hover
-        
+.navigationBar
+ margin: 20px
+
+.navigationBar_username 
+  justify-content: flex-end !important
+
+.navigationBar_bar
+  display: flex
+  flex-direction: row
+  justify-content: flex-start
+  align-items: flex-start
+  width: 100%
+  
+  
+  
+  a 
+    color: $white !important
+    text-decoration: none
+    text-transform: uppercase
+    font-size: 1em
+    font-weight: 300
+
+
+  a:hover
+    text-decoration: underline
