Migrated navigation CSS into navigation component

--- a/client/css/style.sass
+++ b/client/css/style.sass
@@ -2,9 +2,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,800')
 @import color
 
-// Component imports
-@import NavigationBarTop
-
 
 // Global Sass
 *, *:before, *:after 
@@ -18,16 +15,16 @@ html
 body
     margin: 0
 
-#app
-    font-family: 'Open Sans', sans-serif
-    color: $grey
-    height: 100vh
+// #app
+//     font-family: 'Open Sans', sans-serif
+//     color: $grey
+//     height: 100vh
 
-.container
-    justify-content: flex-start
-    align-content: flex-start
-    flex-direction: row
-    height: 100vh
+// .container
+//     justify-content: flex-start
+//     align-content: flex-start
+//     flex-direction: row
+//     height: 100vh
 
 h1
     font-size: 32px
